--- a/java-arquitectura-hexagonal/microservicio/infraestructura/src/test/resources/application.yaml
+++ b/java-arquitectura-hexagonal/microservicio/infraestructura/src/test/resources/application.yaml
@@ -1,7 +1,8 @@
 spring:
    datasource:
       driver-class-name: org.h2.Driver
-      jdbcUrl: jdbc:h2:~/memtestdb;MODE=MySQL;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=FALSE;CASE_INSENSITIVE_IDENTIFIERS=TRUE
+      type: com.zaxxer.hikari.HikariDataSource
+      jdbcUrl: jdbc:h2:~/memtestdb;MODE=MySQL;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=TRUE;CASE_INSENSITIVE_IDENTIFIERS=TRUE
       username: sa
       password:
       hikari:
